--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>mc.com.allianz</groupId>
+	<groupId>mx.com.allianz</groupId>
 	<artifactId>portal-clientes-services</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>portal-clientes-services</name>
